
SVN
-------------------------------

XML:   Resolved issue CASTOR-384 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Added support for 'pattern' facet for <xsd:decimal>.
       Details: http://jira.codehaus.org/browse/CASTOR-384
       (Werner - 20061102)

XML:   Resolved issue CASTOR-1675 using contribution from Eric Wittmann [wittmann@snet.net]
       Fixed problem with SchemaWriter not serializing anyAttribute child of a complexType.
       Details: http://jira.codehaus.org/browse/CASTOR-1675
       (Werner - 20061102)

XML:   Resolved issue CASTOR-1670 using contribution from Edward Kuns [edward.kuns@aspect.com]
       Add to CTF ability to specify failure step.
       Details: http://jira.codehaus.org/browse/CASTOR-1670
       (Edward - 20061030)

XML:   Resolved issue CASTOR-1615 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Added HTML docs about prepared statement pooling.
       Details: http://jira.codehaus.org/browse/CASTOR-1615
       (Werner - 20061030)

XML:   Resolved issue CASTOR-1668 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Added test for enums to XML test suite.
       Details: http://jira.codehaus.org/browse/CASTOR-1668
       (Werner - 20061030)

XML:   Resolved issue CASTOR-1653 using contribution from Ralf Joachim [ralf.joachim@syscon-world.de]
       Fixed type conversion error when unmarshalling enum fields.
       Details: http://jira.codehaus.org/browse/CASTOR-1653
       (Ralf - 20061028)

XML:   Resolved issue CASTOR-1667 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Switched org.exolab.castor.builder.package to use Jakarta's commons-logging for logging.
       Details: http://jira.codehaus.org/browse/CASTOR-1667
       (Werner - 20061028)

XML:   Resolved issue CASTOR-1642 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Switched Marshaller to use Jakarta's commons-logging for logging (adding additional